--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
+:root{
+  --mainBlue: rgb(133, 51, 4);
+  --lightBlue: rgb(184, 176, 168);
+  --mainWhite: rgb(26, 5, 5);
+  --mainDark: rgb(216, 216, 216);
+  --mainBrown: rgb(114, 52, 27);
+  --transition: all 1s linear;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  background: rgb(36,0,5);
+background: linear-gradient(180deg, rgba(36,0,5,1) 0%, rgba(121,9,9,1) 50%, rgba(255,0,0,1) 100%);
+  color: var(--mainDark) !important;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.text-title{
+  letter-spacing: 0.3rem;
+  text-transform: uppercase;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.text-blue{
+  color: var(--mainBlue);
 }
-
-.App-link {
-  color: #61dafb;
+.text-bright{
+  color: var(--lightBlue);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-black{
+  background: transparent;
+  text-transform: capitalize;
+  font-size: 0.8rem !important;
+  color:var(--mainDark);
+  border-radius: 0 !important;
+  border: 0.1rem solid var(--mainDark) !important;
+}
+.btn-black:hover{
+  background: var(--mainDark) !important;
+  color: var(--mainWhite) !important;
+}
+.cart-icon{
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: var(--lightBlue);
+}
+.img-container.p-5 {
+  height: 100%;
 }
