--- a/src/App.css
+++ b/src/App.css
@@ -46,11 +46,15 @@ background: linear-gradient(180deg, rgba(36,0,5,1) 0%, rgba(121,9,9,1) 50%, rgba
     margin-left: auto;
     margin-right: auto;
 }
-.sc-htpNat.keIjFs.col-9.col-md-6.col-lg-4.my-3 {
+.floated {
   float: left;
 }
 .sticky{
   position: -webkit-sticky;
   position: sticky;
   top: 75px;
+}
+.twitterContainer {
+  height: 400px;
+  overflow: scroll;
 }
