--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,9 @@ background: linear-gradient(180deg, rgba(36,0,5,1) 0%, rgba(121,9,9,1) 50%, rgba
 .text-bright{
   color: var(--lightBlue);
 }
+.btn{
+  color: white !important;
+}
 .btn-black{
   background: transparent;
   text-transform: capitalize;
@@ -57,6 +60,10 @@ background: linear-gradient(180deg, rgba(36,0,5,1) 0%, rgba(121,9,9,1) 50%, rgba
 .twitterContainer {
   height: 400px;
   overflow: scroll;
+}
+.lead {
+  font-size: 1.5rem;
+  font-weight: 600 !important;
 }
 
 @media only screen and (max-width: 767px) {
