--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,10 @@ background: rgb(190, 190, 190);
   font-size: 1.5rem;
   font-weight: 600 !important;
  }
+ .accordion {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
 @media only screen and (max-width: 767px) {
   .col-9 {
     max-width: 100% !important;
