--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   --transition: all 1s linear;
 }
 body{
-background: rgb(190, 190, 190);
+background: #ffffff;
   color: var(--mainDark) !important;
 }
 .text-title{
