--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,10 @@ background: #ffffff;
   margin-top: 100px;
   margin-bottom: 100px;
 }
+iframe {
+  width:100%;
+  height:500px;
+}
 @media only screen and (max-width: 767px) {
   .col-9 {
     max-width: 100% !important;
