--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,11 @@ iframe {
   width:100%;
   height:500px;
 }
+section.cart-page {
+  margin-top: 120px;
+  margin-bottom: 100px;
+}
+
 @media only screen and (max-width: 767px) {
   .col-9 {
     max-width: 100% !important;
